2012-03-07  Jon Lee  <jonlee@apple.com>

        Add support for ENABLE(LEGACY_NOTIFICATIONS)
        https://bugs.webkit.org/show_bug.cgi?id=80497

        Reviewed by Adam Barth.

        Prep for b80472: Update API for Web Notifications
        * Configurations/FeatureDefines.xcconfig:

2012-02-20  Jer Noble  <jer.noble@apple.com>

        Full Screen Refactor Part 4: Animate into Full Screen mode using new animation classes, WebKit edition.
        https://bugs.webkit.org/show_bug.cgi?id=78930

        Reviewed by Anders Carlsson.

        Revise WebFullScreenController to have the same general functionality and code path as WKFullScreenWindowController
        in WebKit2.  As such, the following functions are copies of their equivalents in WKFullScreenWindowController:
        * WebView/WebFullScreenController.mm:
        (-[WebFullScreenController init]):
        (-[WebFullScreenController dealloc]):
        (-[WebFullScreenController windowDidLoad]):
        (-[WebFullScreenController cancelOperation:]):
        (-[WebFullScreenController applicationDidResignActive:]):
        (-[WebFullScreenController applicationDidChangeScreenParameters:]):
        (-[WebFullScreenController finishedEnterFullScreenAnimation:]):
        (-[WebFullScreenController finishedExitFullScreenAnimation:]):
        (-[WebFullScreenController close]):
        (-[WebFullScreenController animationDidEnd:]):
        (-[WebFullScreenController _updateMenuAndDockForFullScreen]):
        (-[WebFullScreenController _swapView:with:]):
        (createBackgroundFullscreenWindow):
        (windowFrameFromApparentFrames):
        (-[WebFullScreenController _startEnterFullScreenAnimationWithDuration:]):
        (-[WebFullScreenController _startExitFullScreenAnimationWithDuration:]):

        The following is a copy of the equivalent function in WebFullScreenManager:
        * WebView/WebFullScreenController.mm:
        (screenRectOfContents):        

        * WebCoreSupport/WebChromeClient.mm: